# physics_embed

./: .gitignore  README.md  pyproject.toml
data/: burgers.npz  heat.npz  linear_elasticity.npz  linear_elasticity_mirror.npz  linear_elasticity_uniaxial.npz  navier_stokes.npz  ns_tg_nu_0.005.npz  ns_tg_nu_0.01.npz  ns_tg_nu_0.02.npz
docs/: ablation_experiment_plan.md  boundary_conditions_report.md  empirical_formula_constraints.md  experiment_report_template.md  experiment_rigor_audit.md  ns_viscosity_interpolation_experiment.md  pinn_training_results.md  reduced_model_constraints.md  symmetry_embedding_research.md  symmetry_empirical_report.md  training_config_review.md
experiments/: _empirical_ablation_common.py  _reduced_model_ablation_common.py
experiments/baseline/: run_pipeline.py
experiments/burgers_empirical_ablation/: run_ablation.py
experiments/burgers_reduced_model_ablation/: run_ablation.py
experiments/heat_empirical_ablation/: run_ablation.py
experiments/heat_reduced_model_ablation/: run_ablation.py
experiments/linear_elasticity_constitutive_ablation/: run_ablation.py
experiments/linear_elasticity_empirical_ablation/: run_ablation.py
physics_embed/: __init__.py  autodiff.py  constitutive.py  constraints.py  data.py  empirical.py  equations.py  evaluate.py  models.py  ns_spectral.py  ns_taylor_green.py  postprocess.py  reduced_models.py  train.py
scripts/: evaluate_pinn.py  generate_dataset.py  generate_ns_taylor_green.py  run_experiment_pipeline.py  summarize_ablation.py  train_pinn.py  validate_experiment_assets.py  visualize_dataset.py
(+6 files in other folders)
