[project]
name = "physics-embed"
version = "0.1.0"
description = "Dataset generation and PINN baselines with physics, symmetry, empirical, and boundary embeddings."
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "torch",
    "matplotlib",
]

[tool.setuptools.packages.find]
include = ["physics_embed*"]

