[project]
name = "physics-embed"
version = "0.1.0"
description = "Multi-stage physical-knowledge embedding experiments for two-dimensional field models."
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "torch",
    "matplotlib",
]

[tool.setuptools.packages.find]
include = ["physics_embed*"]

